sample-manifests/istio/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: store-front-gateway-external
  namespace: pets
spec:
  gatewayClassName: istio # Specifies the GatewayClass to use
  listeners:
  - name: http
    protocol: HTTP # Protocol used for this listener
    port: 80 # Port on which the Gateway will listen
    allowedRoutes:
      namespaces:
        from: All # Allows routes from all namespaces to attach
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: store-front-vs-external
  namespace: pets
spec:
  parentRefs:
  - name: store-front-gateway-external # Attaches this route to the specified Gateway
  hostnames:
  - "*" # Matches all hostnames
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: / # Matches all paths
    backendRefs:
    - name: store-front # Forwards requests to the 'store-front' service
      kind: Service # Specifies the kind of backend (Service)
      port: 80 # Port on the backend service
